--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Gitpub
+gitprep
 
   Github clone. Serve git repository.
 
@@ -6,7 +6,7 @@ Operation
 
   Start
   
-      ./gitpub
+      ./gitprep
   
     Application start in back ground. Port is 10020.
     You can access the following URL.
@@ -17,6 +17,6 @@ Operation
   
   Stop
   
-      ./gitpub --stop
+      ./gitprep --stop
     
     You can stop application by --stop option.
