--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 1.3
   - add README.md support
   - add submodule support
+  - add Smart HTTP and basic authentication support
 1.2
   - add blame page
   - add blanch import feature
