--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 1.4
   - fix markdown bugs (*em*, _em_)
   - default readme file is changed. README is changed to README.md
-  - add private repository feature
+  - add private repository and collaborator feature
+  - add project encoding support
 1.3
   - add README.md support
   - add submodule support
