--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.6
+  fix bug that can't create collaborator more than one
 1.5
   - fix bug that git clone via http failed.
   - show readme file in sub directory.
