--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 1.6
-  fix bug that can't create collaborator more than one
+  fix bug that can't create collaborator more than one.
+  support time zone.
 1.5
   - fix bug that git clone via http failed.
   - show readme file in sub directory.
