--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.9.1
+  - fix atom feed bug
 1.9
   - add ssh_rep_url_base to cnahge or hide ssh URL user directory
   - add atom feed of commits page
