--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
+2.00_dev ()
+  - drop Perl 5.8 support, now require Perl 5.10.1
+  - use own temparaly directory when creating repositoy with readme file. Now not use /tmp.
+  - add Mojolicious::Plugin::DBViewer to cpanfile
 1.12 (7 Feb 2016)
-  Catch up latest Github design.
-  Fix bug that relative image path in README.md and blob html.
+  - Catch up latest Github design.
+  - Fix bug that relative image path in README.md and blob html.
 1.11 (7 Nov 2015)
   - support relative path in README.md and blob html.
   - support git version 2
