--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@
   - use own temparaly directory when creating repositoy with readme file. Now not use /tmp.
   - add Mojolicious::Plugin::DBViewer to cpanfile
   - X-Forwarded-HTTPS header is DEPRECATED! use X-Forwarded-Proto header instead.
+  - remove [basic]show_ignore_space_change_link option.
+    and enable this feature on in project settings page.
 1.12 (7 Feb 2016)
   - Catch up latest Github design.
   - Fix bug that relative image path in README.md and blob html.
