--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@
     and move this feature to project settings page.
   - remove [basic]encoding_suspects option
     and move this feature to project settings page.
+  - setup.sh is renamed to setup_module
   
 1.12 (7 Feb 2016)
   - Catch up latest Github design.
