drop cygwin support

--- a/CHANGES
+++ b/CHANGES
@@ -7,11 +7,12 @@
     and move this feature to project settings page.
   - remove [basic]encoding_suspects option
     and move this feature to project settings page.
-  - setup.sh is renamed to setup_module
-  - separete database creating logic to setup_database script
+  - setup.sh is renamed to setup_module.
+  - separete database creating logic to setup_database script.
   - add name and mail column to user table. mail is required for user registration.
-  - add user update page
-  - fix bug that repository with read can't be created when git global user name and email
+  - add user update page.
+  - fix bug that repository with read can't be created when git global user name and email.
+  - drop cygwin support.
 1.12 (7 Feb 2016)
   - Catch up latest Github design.
   - Fix bug that relative image path in README.md and blob html.
