--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-2.1 ()
+2.1 (31 May 2016)
   - default login session time become 2 weeks and delete save check box.
   - Fix commits page author links.
   - add admin page link.
