--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2.3
+  - Sorry, I found critical database specification mistake.
+    I must fix pull_request and pull_request_message table.
+    All your pull requests is removed. Please create Pull request again.
+
 2.2 (4 June 2016)
   - add command line merging interface to pull request page
   - add createing patch feture to pull request page
