--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.3.2 (2016-08-17)
+  - add tar.gz download button
 2.3.1 (2016-08-12)
   - prevent XSS attack in issue and pull request message
 2.3 (2016-08-06)
