--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 2.3.2 (2016-08-17)
   - add tar.gz download button
+  - add website URL settings. you can create external link.
 2.3.1 (2016-08-12)
   - prevent XSS attack in issue and pull request message
 2.3 (2016-08-06)
