--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.4.1 (2016-08-22)
+  - fix compare page view link bug
 2.4 (2016-08-20)
   - add tar.gz download button
   - add website URL settings. you can create external link.
