--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.5 (2016-12-05)
+  - GitPrep theme color become dark blue.
 2.4.2 (2016-08-23)
   - fix issue count bugs
   - add issue count and pull reqeust count to header
