--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.5.1 (2016-12-6)
+  - fix img src relative image url
 2.5 (2016-12-05)
   - GitPrep theme color become dark blue.
 2.4.2 (2016-08-23)
